--- a/extract_business_ids_from_database.ipynb
+++ b/extract_business_ids_from_database.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "business ids extracted using database and code from https://github.com/Alkoopman85/Yelp_sqlite_database <b>Must be run in that folder<b/>"
+    "## business ids extracted using database and code from https://github.com/Alkoopman85/Yelp_sqlite_database <b>Must be run in that folder<b/>"
    ]
   },
   {
